<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="alg_M_example_controller_atpos" Id="{0e6b174b-f3df-4640-9fe4-ef834c4f5798}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION alg_M_example_controller_atpos : ARRAY[0..2] OF BOOL
VAR_INPUT
	state: STATE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[alg_M_example_controller_atpos := makeArray1(ivar_s_xpos_at1, ivar_s_xpos_at2, ivar_s_xpos_at3);]]></ST>
    </Implementation>
    <LineIds Name="alg_M_example_controller_atpos">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>